testsuite/tests/builtins/pattern/non_str_regex/test.out
Error: Invalid argument type
   ╭─[ <working-dir>/script.lkql:1:1 ]
   │
 1 │ pattern(42)
   │ ─────┬─────  
   │      ╰─────── Expecting a "Str" for the parameter "regex", got a "Int"
───╯
